<resources>
    <string name="app_name">Petscape Clan</string>

    <string name="error">Error</string>
    <string name="network_error">Something went wrong - try again later</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="display_name">Display Name</string>
    <string name="undetermined">Undetermined</string>

    <string name="register_question">Register?</string>
    <string name="register_exclamation">Register!</string>

    <string name="home_update_last_seen">Update last seen on this clan member?</string>
    <string name="home_filter_not_seen">Not seen today</string>
    <string name="home_filter_rank_up">Needs rank up</string>
    <string name="home_sort_default">Default</string>
    <string name="home_sort_alphabetical">Alphabetical</string>

    <string name="add_new_clan_member">Add New Clan Member</string>
    <string name="member_runescape_name">Runescape Name</string>
    <string name="member_join_date">Join Date:</string>
    <string name="member_boss_kill_count">Boss Kill Count:</string>
    <string name="member_alts">Alts</string>
    <string name="member_pets">Pets</string>
    <string name="member_achievements">Achievements</string>
    <string name="member_boss_kc">Boss KC:</string>
    <string name="member_points">Points:</string>
    <string name="member_possible_rank">Possible Rank:</string>

    <string name="rank_bronze">Bronze</string>
    <string name="rank_iron">Iron</string>
    <string name="rank_steel">Steel</string>
    <string name="rank_gold">Gold</string>
    <string name="rank_mithril">Mithril</string>
    <string name="rank_adamant">Adamant</string>
    <string name="rank_rune">Rune</string>
    <string name="rank_dragon">Dragon</string>
    <string name="rank_admin">Admin</string>
    <string name="rank_deputy_owner">Deputy Owner</string>
    <string name="rank_owner">Owner</string>

    <string name="pet_abyssal_orphan">Abyssal Orphan</string>
    <string name="pet_baby_mole">Baby Mole</string>
    <string name="pet_callisto_cub">Callisto Cub</string>
    <string name="pet_hellpuppy">Hellpuppy</string>
    <string name="pet_ikkle_hydra">Ikkle Hydra</string>
    <string name="pet_jal_nib_rek">Jal Nib Rek</string>
    <string name="pet_kalphite_princess">Kalphite Princess</string>
    <string name="pet_lil_zik">Lil Zik</string>
    <string name="pet_little_nightmare">Little Nightmare</string>
    <string name="pet_noon">Noon</string>
    <string name="pet_olmlet">Olmlet</string>
    <string name="pet_chaos_elemental">Pet Chaos Elemental</string>
    <string name="pet_dagannoth_prime">Pet Dagannoth Prime</string>
    <string name="pet_dagannoth_rex">Pet Dagannoth Rex</string>
    <string name="pet_dagannoth_supreme">Pet Dagannoth Supreme</string>
    <string name="pet_dark_core">Pet Dark Core</string>
    <string name="pet_general_graardor">Pet General Graardor</string>
    <string name="pet_kril_tsutsaroth">Pet K\'ril Tsutsaroth</string>
    <string name="pet_kraken">Pet Kraken</string>
    <string name="pet_kree_arra">Pet Kree\'Arra</string>
    <string name="pet_smoke_devil">Pet Smoke Devil</string>
    <string name="pet_snakeling">Pet Snakeling</string>
    <string name="pet_zilyana">Pet Zilyana</string>
    <string name="pet_prince_black_dragon">Prince Black Dragon</string>
    <string name="pet_scorpias_offspring">Scorpias Offspring</string>
    <string name="pet_skotos">Skotos</string>
    <string name="pet_sraracha">Sraracha</string>
    <string name="pet_tzrek_jad">Tzrek Jad</string>
    <string name="pet_venenatis_spiderling">Venenatis Spiderling</string>
    <string name="pet_vetion_jr">Vetion Jr.</string>
    <string name="pet_vorki">Vorki</string>

    <string name="pet_baby_chinchompa">Baby Chinchompa</string>
    <string name="pet_beaver">Beaver</string>
    <string name="pet_giant_squirrel">Giant Squirrel</string>
    <string name="pet_heron">Heron</string>
    <string name="pet_rift_guardian">Rift Guardian</string>
    <string name="pet_rock_golem">Rock Golem</string>
    <string name="pet_rocky">Rocky</string>
    <string name="pet_tangleroot">Tangleroot</string>

    <string name="pet_bloodhound">Bloodhound</string>
    <string name="pet_chompy_chick">Chompy Chick</string>
    <string name="pet_herbi">Herbi</string>
    <string name="pet_lil_creator">Lil Creator</string>
    <string name="pet_penance_queen">Pet Penance Queen</string>
    <string name="pet_phoenix">Phoenix</string>
    <string name="pet_tiny_tempor">Tiny Tempor</string>
    <string name="pet_youngleff">Youngllef</string>
    <string name="pet_smolcano">Smolcano</string>

    <string name="pet_unknown">Unknown Pet</string>

    <string name="achievement_total_1500">1500 Total Level</string>
    <string name="achievement_total_2000">2000 Total Level</string>
    <string name="achievement_max_cape">Max Cape</string>
    <string name="achievement_base_70">Base 70 Stats</string>
    <string name="achievement_base_80">Base 80 Stats</string>
    <string name="achievement_base_90">Base 90 Stats</string>
    <string name="achievement_combat_126">126 Combat</string>
    <string name="achievement_quest_cape">Quest Cape</string>
    <string name="achievement_achievement_cape">Achievement Cape</string>
    <string name="achievement_music_cape">Music Cape</string>
    <string name="achievement_champions_cape">Champion\'s Cape</string>
    <string name="achievement_infernal_cape">Infernal Cape</string>
    <string name="achievement_xerics_cape">Xerics Cape</string>
    <string name="achievement_sinhaza_shroud">Sinhaza Shroud</string>
    <string name="achievement_slayer_helm_set">Slayer Helmet Set</string>

    <string name="achievement_transmog_dark_acorn">Dark Acorn Squirrel Transmog</string>
    <string name="achievement_transmog_metamorphic_dust">Metamorphic Dust Olmlet Transmog</string>
    <string name="achievement_transmog_sanguine_dust">Sanguine Dust Verzik Transmog</string>
    <string name="achievement_transmog_6Jads">TzHaar-Ket-Rak\'s Challenges Jad Transmog</string>
    <string name="achievement_transmog_blue_heron">Blue Heron Transmog</string>
    <string name="achievement_transmog_sraracha">Sraracha Transmogs</string>
    <string name="achievement_transmog_phosanis">Phosani\'s Nightmare Transmog</string>

    <string name="achievement_clues_600_beginner">600 Beginner Clues</string>
    <string name="achievement_clues_500_easy">500 Easy Clues</string>
    <string name="achievement_clues_400_medium">400 Medium Clues</string>
    <string name="achievement_clues_300_hard">300 Hard Clues</string>
    <string name="achievement_clues_200_elite">200 Elite Clues</string>
    <string name="achievement_clues_100_master">100 Master Clues</string>

    <string name="achievement_skill_50m_exp">50m Exp in a Skill</string>
    <string name="achievement_skill_100m_exp">100m Exp in a Skill</string>
    <string name="achievement_skill_200m_exp">200m Exp in a Skill</string>

    <string name="achievement_collection_log_250">250 Collection Log Slots</string>
    <string name="achievement_collection_log_500">500 Collection Log Slots</string>
    <string name="achievement_collection_log_1000">1000 Collection Log Slots</string>

    <string name="achievement_unknown">Unknown Achievement</string>

</resources>