<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.blakdragon.petscapeoffline.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp">

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".5"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            android:gravity="center"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bLogin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/bRegister"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bRegister"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/register"
                app:layout_constraintStart_toEndOf="@id/bLogin"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight=".5"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/bGoogleSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"/>

    </LinearLayout>

</layout>