<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.blakdragon.petscapeclan.ui.fragments.members.AddEditClanMemberViewModel"/>
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etRunescapeName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/member_runescape_name"
                    android:layout_marginEnd="8dp"
                    android:text="@={viewModel.runescapeName}"
                    android:inputType="text"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivRank"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:imageResource="@{viewModel.rank.iconId}"
                    tools:src="@drawable/rank_dragon"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/joinDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/member_join_date"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bJoinDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{viewModel.joinDateString}"
                    tools:text="Jan 11, 2018"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/member_alts"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintHeight_max="300dp"
                    app:cardBackgroundColor="@color/onPrimary"
                    app:cardCornerRadius="16dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvAlts"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp"
                        tools:listitem="@layout/cell_alt_name"/>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/member_pets"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="12dp"
                app:cardBackgroundColor="@color/onPrimary"
                app:cardCornerRadius="16dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPets"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    tools:listitem="@layout/cell_selectable_text"/>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/member_achievements"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="12dp"
                app:cardBackgroundColor="@color/onPrimary"
                app:cardCornerRadius="16dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAchievements"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    tools:listitem="@layout/cell_selectable_text" />

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/submit"
                android:onClick="@{() -> viewModel.addUpdateClanMember()}"
                android:visibility="@{viewModel.addClanMemberLoading ? View.GONE : View.VISIBLE}"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="@{viewModel.addClanMemberLoading ? View.VISIBLE : View.GONE}"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</layout>