<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.blakdragon.petscapeclan.ui.fragments.members.AddClanMemberViewModel"/>
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etRunescapeName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/member_runescape_name"
                android:layout_marginEnd="8dp"
                android:text="@={viewModel.runescapeName}"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ivRank"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivRank"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:imageResource="@{viewModel.rank.iconId}"
                app:layout_constraintTop_toTopOf="@id/etRunescapeName"
                app:layout_constraintBottom_toBottomOf="@id/etRunescapeName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                tools:src="@drawable/rank_dragon"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/joinDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/etRunescapeName">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/member_join_date"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bJoinDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{viewModel.joinDateString}"
                    tools:text="Jan 11, 2018"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/killCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/joinDate">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/member_boss_kill_count"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{viewModel.bossKc}"
                    tools:text="5493"/>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:visibility="@{viewModel.hiscoresLoading ? View.VISIBLE : View.GONE}"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/onPrimary"
                app:cardCornerRadius="16dp"
                app:layout_constraintTop_toBottomOf="@id/killCount">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPets"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    tools:listitem="@layout/cell_pet"/>

            </androidx.cardview.widget.CardView>

            <!-- todo achievements -->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>